@@ -7,10 +7,10 @@ import java.util.stream.Stream;
 
 public class FileSearch {
     public static String searchFile(String fileName) {
-        return Files.walk(Path.of("documents"))
-        .filter((path)-> path.getFileName().toString().equals(fileName))
-        .findFirst()
-        .map(Path::toString)
-        .orElse(null);
+        return Files.walk(Paths.get("documents"))
+                .filter((path) -> path.getFileName().toString().equals(fileName))
+                .findFirst()
+                .map(Path::toString)
+                .orElse(null);
     }
 }
